# lolita

./: .gitignore  500_finite_element_hdg_discretization.hxx  CMakeLists.txt  TODO.md  tmp_1.hxx  tmp_2.hxx
.VSCodeCounter/2022-10-18_18-12-23/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-11-28_17-56-15/: details.md  diff-details.md  diff.md  diff.txt  results.json  results.md  results.txt
applications/: CMakeLists.txt
applications/app/: CMakeLists.txt  app.cxx
applications/linear_elastic_tensile_square/: CMakeLists.txt  app.cxx
applications/linear_elastic_tensile_square/data/behavior/bhv_elasticity/: linear_elasticity.mfront
applications/linear_elastic_tensile_square/data/behavior/bhv_isotropic_linear_hardening/: IsotropicLinearHardeningPlasticity.mfront
applications/linear_elastic_tensile_square/data/behavior/bhv_small_strain_voce_plasticity/: small_strain_voce_plasticity.mfront
applications/linear_elastic_tensile_square/data/mesh/: mixed.geo  mixed_2.geo  mixed_structured.geo  mixed_structured_0.geo  square.geo
applications/micromorphic_damage_alessi/: CMakeLists.txt  app.cxx  math.ixx
applications/micromorphic_damage_alessi/data/mesh/: alessi.geo  alessi2.geo
applications/micromorphic_damage_plate/: CMakeLists.txt  app.cxx
applications/micromorphic_damage_plate/data/mesh/: plate.geo  plate2.geo  rod.geo
applications/micromorphic_damage_tensile_rod/: CMakeLists.txt  app.cxx  out_damage_dissipated_energy.txt  out_damage_stored_energy.txt  out_displacement_stored_energy.txt  out_force.txt
applications/micromorphic_damage_tensile_rod/data/behavior/bhv_micromorphic_damage/: bhv_micromorphic_damage.mfront
applications/micromorphic_damage_tensile_rod/data/behavior/bhv_micromorphic_displacement/: bhv_micromorphic_displacement.mfront
applications/micromorphic_damage_tensile_rod/data/mesh/: mixed.geo
applications/new/: CMakeLists.txt  test.cxx
applications/small_strain_voce_tensile_square/: CMakeLists.txt  app.cxx
applications/test/: CMakeLists.txt  app.cxx  test.cxx
cmake/: FindMGIS.cmake  FindMKL.cmake  FindMKL2.cmake  FindPETSc.cmake  cmake_options.txt
data/mesh/: alessi2.geo  plate.geo  square.geo  test.inp  test2.inp
include/: algebra.hxx  config.hxx  linear_system.hxx  lolita.hxx  numerics.hxx  utility.hxx
include/2/: TODO.txt  basis.hxx  discretization.hxx  domain.hxx  field.hxx  geometry.hxx  label.hxx  lagrangian.hxx  linear_operator.hxx  mesh.hxx  potential.hxx  quadrature.hxx  shape.hxx  tensor.hxx
include/core/: 000_physics_traits.hxx  001_geometry.hxx  003_quadrature.hxx  004_finite_element.hxx  005_finite_element_basis.hxx  006_finite_element_hdg_discretization.hxx  (+14 more)
include__/: algebra.hxx  config.hxx  numerics.hxx  tensor.hxx
miscs/: basis.py
old/: 00_feta_core_mesh_interior_domain.hxx  00_finite_element_data.hxx  00_finite_element_description_base.hxx  00_finite_element_description_hho.hxx  00_finite_element_geometry.hxx  00_finite_element_type.hxx  00_frame_type.hxx  _feta.hxx  _feta_aggregate.hxx  _feta_array.hxx  _feta_collection.hxx  _feta_files.hxx  _feta_matrix.hxx  _feta_raise.hxx  _feta_shared_pointer.hxx  _feta_tensor.hxx  _feta_unordered_map.hxx  feta_core_behaviour.hxx  feta_core_element_basis.hxx  feta_core_element_basis_description.hxx  feta_core_element_element.hxx  feta_core_element_element_connectivity.hxx  feta_core_element_element_description.hxx  feta_core_element_element_reference.hxx  feta_core_element_fe_build.hxx  feta_core_element_fe_data.hxx  feta_core_element_fe_degree_of_freedom.hxx  feta_core_element_geometry.hxx  feta_core_element_quadrature_description.hxx  feta_core_element_quadrature_gauss_segment.hxx  feta_core_element_shape_description.hxx  feta_core_elements.hxx  feta_core_fe_description.hxx  feta_core_field_description.hxx  feta_core_geometry_geometry.hxx  feta_core_load.hxx  feta_core_mapping_description.hxx  feta_core_mesh_parser_base.hxx  feta_core_mesh_parser_implementation.hxx  feta_core_mesh_parser_interface.hxx  (+11 more)
src/: CMakeLists.txt
tests/: CMakeLists.txt  main.cxx  new_test.cxx  out1.msh  out_quadrangle050.msh  out_square_mixed_unstructured_out.msh  out_t0.msh  out_triangle_structured_00050.msh  out_triangle_unstructured_00050.msh  test_0.cxx  test_deb.cxx  test_integ.cxx  test_lolita.cxx  test_lolita_1.cpp  test_mgis.cxx  test_misc.cxx  test_n.cxx  test_nn.cxx  test_nnn.cxx  test_quadrangle.cxx  test_triangle.cxx
tests/data/behaviour/: finite_strain_isotropic_voce_hardening.mfront
tests/data/behaviour/include/MFront/GenericBehaviour/: Voce-generic.hxx
tests/data/behaviour/include/TFEL/Material/: VoceBehaviourData.hxx
tests/data/behaviour/src/: Voce.cxx
tests/data/bhv_micromorphic/include/MFront/GenericBehaviour/: MicromorphicDamageII-generic.hxx
tests/data/bhv_micromorphic/include/TFEL/Material/: MicromorphicDamageII.hxx
tests/data/bhv_micromorphic/src/: MicromorphicDamageII-generic.cxx  targets.lst
tests/data/meshes/: cook_01_quadrangles_structured.msh  mixed.geo  quadrangle.geo  quadrangle.msh  quadrangle004.msh  quadrangle006.msh  quadrangle050.msh  quadrangle10.msh  quadrangle100.msh  quadrangle_unstructured_00050.msh  square.geo  square2.geo  square2.msh  square_mixed_unstructured.msh  square_mixed_unstructured_out.msh  triangle050.msh  triangle_structured_00001.msh  triangle_structured_00002.msh  triangle_structured_00050.msh  triangle_unstructured_00050.msh  triangles_3.msh
tests/t0/: mesh.msh
tests/test_0/: test_0.cxx
tests/test_0/data/behavior/bhv_micromorphic_damage/: bhv_micromorphic_damage.mfront
tests/test_0/data/behavior/bhv_micromorphic_displacement/: bhv_micromorphic_displacement.mfront
tests/test_0/data/mesh/cook/: cook.geo
tests/test_0/data/mesh/square/: mixed.geo  square.geo
tests/test_coupled_problem/: test_coupled_problem.cxx
tests/test_coupled_problem/data/behavior/bhv_elasticity/: linear_elasticity.mfront
tests/test_coupled_problem/data/mesh/square/: square2.geo
tmp/: __temp.hxx  _lolita_core_n_1.hxx  _lolita_core_n_3.hxx  _lolita_user.hxx
(+154 files in other folders)
